--- a/views/game.handlebars
+++ b/views/game.handlebars
@@ -1,7 +1,7 @@
 <div>
 	<div class="game-area h-full w-full flex flex-col">
-		<div class="flex flex-row flex-wrap" id="boards">
-			<div class="flex flex-col mr-2 ml-2" id="game-enemy">
+		<div class="flex flex-col lg:flex-row justify-center flex-wrap" id="boards">
+			<div class="flex flex-col mr-2 ml-2 justify-between" id="game-enemy">
 				<h2 id="enemy-name" class="text-center">No Enemy Yet</h2>
 				<div class="flex flex-row justify-between" id="number-grid">
 					<div class="flex flex-col w-11" id="0"></div>
@@ -153,20 +153,20 @@
 			</div>
 			<div class="flex flex-col mr-2 ml-2" id="game-player">
 				<h2 class="text-center">My Board</h2>
-				<div class="flex flex-row justify-between" id="number-grid">
-					<div class="flex flex-col w-11" id="0"></div>
-					<div class="flex flex-col w-11" id="1">1</div>
-					<div class="flex flex-col w-11" id="2">2</div>
-					<div class="flex flex-col w-11" id="3">3</div>
-					<div class="flex flex-col w-11" id="4">4</div>
-					<div class="flex flex-col w-11" id="5">5</div>
-					<div class="flex flex-col w-11" id="6">6</div>
-					<div class="flex flex-col w-11" id="7">7</div>
-					<div class="flex flex-col w-11" id="8">8</div>
-					<div class="flex flex-col w-9" id="9">9</div>
-					<div class="flex flex-col w-11" id="10">10</div>
+				<div class="flex flex-row justify-center" id="number-grid">
+					<div class="flex flex-col w-11 pr-2 pl-2" id="0"></div>
+					<div class="flex flex-col w-11 pr-2 pl-2" id="1">1</div>
+					<div class="flex flex-col w-11 pr-2 pl-2" id="2">2</div>
+					<div class="flex flex-col w-11 pr-2 pl-2" id="3">3</div>
+					<div class="flex flex-col w-11 pr-2 pl-2" id="4">4</div>
+					<div class="flex flex-col w-11 pr-2 pl-2" id="5">5</div>
+					<div class="flex flex-col w-11 pr-2 pl-2" id="6">6</div>
+					<div class="flex flex-col w-11 pr-2 pl-2" id="7">7</div>
+					<div class="flex flex-col w-11 pr-2 pl-2" id="8">8</div>
+					<div class="flex flex-col w-9 pr-2 pl-2" id="9">9</div>
+					<div class="flex flex-col w-11 pr-2 pl-2" id="10">10</div>
 				</div>
-				<div class="flex flex-row" id="A">
+				<div class="flex flex-row justify-center" id="A">
 					<div class="pr-2 pl-2" id="LA">A</div>
 					<div class="flex flex-col w-11 box-border border-2 pr-2 pl-2" id="A1"></div>
 					<div class="flex flex-col w-11 box-border border-2 pr-2 pl-2" id="A2"></div>
@@ -179,7 +179,7 @@
 					<div class="flex flex-col w-11 box-border border-2 pr-2 pl-2" id="A9"></div>
 					<div class="flex flex-col w-11 box-border border-2 pr-2 pl-2" id="A10"></div>
 				</div>
-				<div class="flex flex-row" id="B">
+				<div class="flex flex-row justify-center" id="B">
 					<div class="pr-2 pl-2" id="LB">B</div>
 					<div class="flex flex-col w-11 box-border border-2 pr-2 pl-2" id="B1"></div>
 					<div class="flex flex-col w-11 box-border border-2 pr-2 pl-2" id="B2"></div>
@@ -192,7 +192,7 @@
 					<div class="flex flex-col w-11 box-border border-2 pr-2 pl-2" id="B9"></div>
 					<div class="flex flex-col w-11 box-border border-2 pr-2 pl-2" id="B10"></div>
 				</div>
-				<div class="flex flex-row" id="C">
+				<div class="flex flex-row justify-center" id="C">
 					<div class="pr-2 pl-2" id="LC">C</div>
 					<div class="flex flex-col w-11 box-border border-2 pr-2 pl-2" id="C1"></div>
 					<div class="flex flex-col w-11 box-border border-2 pr-2 pl-2" id="C2"></div>
@@ -205,7 +205,7 @@
 					<div class="flex flex-col w-11 box-border border-2 pr-2 pl-2" id="C9"></div>
 					<div class="flex flex-col w-11 box-border border-2 pr-2 pl-2" id="C10"></div>
 				</div>
-				<div class="flex flex-row" id="D">
+				<div class="flex flex-row justify-center" id="D">
 					<div class="pr-2 pl-2" id="LD">D</div>
 					<div class="flex flex-col w-11 box-border border-2 pr-2 pl-2" id="D1"></div>
 					<div class="flex flex-col w-11 box-border border-2 pr-2 pl-2" id="D2"></div>
@@ -218,7 +218,7 @@
 					<div class="flex flex-col w-11 box-border border-2 pr-2 pl-2" id="D9"></div>
 					<div class="flex flex-col w-11 box-border border-2 pr-2 pl-2" id="D10"></div>
 				</div>
-				<div class="flex flex-row" id="E">
+				<div class="flex flex-row justify-center" id="E">
 					<div class="pr-2 pl-2" id="LE">E</div>
 					<div class="flex flex-col w-11 box-border border-2 pr-2 pl-2" id="E1"></div>
 					<div class="flex flex-col w-11 box-border border-2 pr-2 pl-2" id="E2"></div>
@@ -231,7 +231,7 @@
 					<div class="flex flex-col w-11 box-border border-2 pr-2 pl-2" id="E9"></div>
 					<div class="flex flex-col w-11 box-border border-2 pr-2 pl-2" id="E10"></div>
 				</div>
-				<div class="flex flex-row" id="F">
+				<div class="flex flex-row justify-center" id="F">
 					<div class="pr-2 pl-2" id="LF">F</div>
 					<div class="flex flex-col w-11 box-border border-2 pr-2 pl-2" id="F1"></div>
 					<div class="flex flex-col w-11 box-border border-2 pr-2 pl-2" id="F2"></div>
@@ -244,7 +244,7 @@
 					<div class="flex flex-col w-11 box-border border-2 pr-2 pl-2" id="F9"></div>
 					<div class="flex flex-col w-11 box-border border-2 pr-2 pl-2" id="F10"></div>
 				</div>
-				<div class="flex flex-row" id="G">
+				<div class="flex flex-row justify-center" id="G">
 					<div class="pr-2 pl-2" id="LG">G</div>
 					<div class="flex flex-col w-11 box-border border-2 pr-2 pl-2" id="G1"></div>
 					<div class="flex flex-col w-11 box-border border-2 pr-2 pl-2" id="G2"></div>
@@ -257,7 +257,7 @@
 					<div class="flex flex-col w-11 box-border border-2 pr-2 pl-2" id="G9"></div>
 					<div class="flex flex-col w-11 box-border border-2 pr-2 pl-2" id="G10"></div>
 				</div>
-				<div class="flex flex-row" id="H">
+				<div class="flex flex-row justify-center" id="H">
 					<div class="pr-2 pl-2" id="LH">H</div>
 					<div class="flex flex-col w-11 box-border border-2 pr-2 pl-2" id="H1"></div>
 					<div class="flex flex-col w-11 box-border border-2 pr-2 pl-2" id="H2"></div>
@@ -270,7 +270,7 @@
 					<div class="flex flex-col w-11 box-border border-2 pr-2 pl-2" id="H9"></div>
 					<div class="flex flex-col w-11 box-border border-2 pr-2 pl-2" id="H10"></div>
 				</div>
-				<div class="flex flex-row" id="I">
+				<div class="flex flex-row justify-center" id="I">
 					<div class="pr-2 pl-2" id="LI">I</div>
 					<div class="flex flex-col w-11 box-border border-2 pr-2 pl-2" id="I1"></div>
 					<div class="flex flex-col w-11 box-border border-2 pr-2 pl-2" id="I2"></div>
@@ -283,7 +283,7 @@
 					<div class="flex flex-col w-11 box-border border-2 pr-2 pl-2" id="I9"></div>
 					<div class="flex flex-col w-11 box-border border-2 pr-2 pl-2" id="I10"></div>
 				</div>
-				<div class="flex flex-row" id="J">
+				<div class="flex flex-row justify-center" id="J">
 					<div class="pr-2 pl-2" id="LJ">J</div>
 					<div class="flex flex-col w-11 box-border border-2 pr-2 pl-2" id="J1"></div>
 					<div class="flex flex-col w-11 box-border border-2 pr-2 pl-2" id="J2"></div>
