--- a/views/partials/chat.handlebars
+++ b/views/partials/chat.handlebars
@@ -1,4 +1,4 @@
-<div class=" flex flex-col box-border border-2 p-3">
+<div class="flex flex-col box-border border-2 p-3 lg:w-full mt-8">
 	<title class="border-2">Game Chat</title>
 	<ul id="chatArea" class="chat-area flex flex-col h-3/4 border-2 py-1" data-chat-id="{{enemyBoard.user.dataValues.id}}">
 		
